; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/rtsp/extr_rtsp_reader.c_rtsp_reader_seek.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/rtsp/extr_rtsp_reader.c_rtsp_reader_seek.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VC_CONTAINER_ERROR_UNSUPPORTED_OPERATION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32*)* @rtsp_reader_seek to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtsp_reader_seek(i32* %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @VC_CONTAINER_PARAM_UNUSED(i32* %9)
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @VC_CONTAINER_PARAM_UNUSED(i32* %11)
  %13 = load i32*, i32** %7, align 8
  %14 = call i32 @VC_CONTAINER_PARAM_UNUSED(i32* %13)
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @VC_CONTAINER_PARAM_UNUSED(i32* %15)
  %17 = load i32, i32* @VC_CONTAINER_ERROR_UNSUPPORTED_OPERATION, align 4
  ret i32 %17
}

declare dso_local i32 @VC_CONTAINER_PARAM_UNUSED(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
